--- a/FizzBuzz.Test/FizzBuzz.Test.csproj
+++ b/FizzBuzz.Test/FizzBuzz.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz.App\FizzBuzz.App.csproj">
+      <Project>{887F483E-2D53-4A4F-85F6-FB1F41757F74}</Project>
+      <Name>FizzBuzz.App</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
