--- a/FizzBuzz.App/FizzBuzz.App.csproj
+++ b/FizzBuzz.App/FizzBuzz.App.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuzzCheck.cs" />
     <Compile Include="FizzCheck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
