--- a/FizzBuzz.App/FizzBuzz.App.csproj
+++ b/FizzBuzz.App/FizzBuzz.App.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuzzCheck.cs" />
+    <Compile Include="FizzBuzzCheck.cs" />
     <Compile Include="FizzCheck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
