Moved PlayFizzBuzz function to another class & did refractoring to follow SOLID principles Written test cases for testing PlayFizzBuzz function.

--- a/FizzBuzz.App/FizzBuzz.App.csproj
+++ b/FizzBuzz.App/FizzBuzz.App.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BuzzCheck.cs" />
     <Compile Include="FizzBuzzCheck.cs" />
     <Compile Include="FizzCheck.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="ICheck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
